--- a/doardGradle/build.gradle
+++ b/doardGradle/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	
-	implementation 'org.mariadb.jdbc:mariadb-java.client:2.1.2'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
 	compile('javax.servlet:jstl')
 	compile('org.apache.tomcat.embed:tomact-embed-jasper')
 	
