--- a/doardGradle/build.gradle
+++ b/doardGradle/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.bbs'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -22,9 +22,9 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2' 
 	compile('javax.servlet:jstl')
-	compile('org.apache.tomcat.embed:tomact-embed-jasper')
+	compile('org.apache.tomcat.embed:tomcat-embed-jasper')
 	
 }
 
