--- a/doardGradle/src/main/resources/application.properties
+++ b/doardGradle/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DB접속정보
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mybbs   
+spring.datasource.url=jdbc:mariadb://localhost:3306/mybbs  
 spring.datasource.username=bbsuser
 spring.datasource.password=1234
 
@@ -9,3 +9,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 #port
 server.port=8080
+
+#jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
